Fixed layout bug in advanced search

--- a/themes/krimdok/less/bootstrap.less
+++ b/themes/krimdok/less/bootstrap.less
@@ -496,3 +496,12 @@ ul.noresult li {
 form.form-inline div.row {
   margin-bottom: 15px;
 }
+
+.adv-group {
+    position: relative;
+    background: #eee;
+    border-radius: 4px;
+    border: 1px solid #c8c8c8;
+    margin-top: 0;
+    margin-bottom: .5em !important
+}
